--- a/about.html
+++ b/about.html
@@ -138,11 +138,11 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 
 							</li>
 
-							<li><a href="#">Case studies</a>
+							<li><a href="#">Gallery</a>
 								<ul class="dropdown1">
 								<div class="main">	
-								<li><a href="case_studies_videos.html" style="color: black;">Videos</a></li>
-								<li><a href="case_studies_text.html" style="color: black;">Text</a></li>
+									<li><a href="case_studies_text.html" style="color: black;">Photos</a></li>
+									<li><a href="case_studies_videos.html" style="color: black;">Videos</a></li>
 								</div>
 								</ul>
 							</li>
@@ -233,7 +233,7 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 			<div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 col-lg-pull-5 col-md-pull-5 col-sm-pull-5 col-xs-pull-0">
 				<div class="ast_about_info">
 					<br><h3 class="ast_blog_info_heading" style="color:#FF8409; font-weight:bold;"><strong>Vedmurti Shree Krishna Joshi Guruji Kanvashakha Sanhita </strong></h3><br>
-					<p style="color:#FF0000;"><strong>नमस्ते वास्तु पुरुष: भूशय्या भिरत प्रभो | मद्गृहे धन धान्यादि समृद्धं कुरु सर्वदा || <br>My bow to a Vastu Purush who is living on the ground to give me prosperity in my house forever.</strong></p><br>
+					<p style="color:#FF8409;"><strong>नमस्ते वास्तु पुरुष: भूशय्या भिरत प्रभो | मद्गृहे धन धान्यादि समृद्धं कुरु सर्वदा || <br>My bow to a Vastu Purush who is living on the ground to give me prosperity in my house forever.</strong></p><br>
 					<p style="color:#000000; text-align: justify;">Vedmurti Shree Krishna Joshi Guruji Kanvashakha Sanhita is a renowned spiritual guide and expert in the field of Vedic astrology and Vastu. Guruji has acquired extensive knowledge and expertise through years of dedicated study and practice.
 						Guruji has earned the prestigious title of Vastu Visharad, Sanskrit-Jyotish Visharad, and Jyotish Pandit, among others, due to his in-depth understanding of the sacred sciences. His expertise also includes Nakshatra Jyotish Ratna, Vastu Bhushan, and Vastu Pandit.</p><br>
 					<p align="justify">In addition to his academic qualifications, Guruji has gained recognition for his excellence in performing Dramik Vidhis such as Navchandi and Shatchandi-Sahastrachandi. His significant contributions have earned him the esteemed title of "Acharya."
@@ -261,7 +261,7 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 			<div class="ast_whywe_info">
 				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 					<div class="ast_whywe_info_box">
-						<span><img src="images/img1.png"></span>
+						<span><img src="images/img1.png" style="color: #FFFFFF;"></span>
 						<div class="ast_whywe_info_box_info">							
 							<p style="font-weight:bold;">Accurate Remedial Solutions </p>
 						</div>
@@ -269,7 +269,7 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 					<div class="ast_whywe_info_box">
-						<span><img src="images/img2.png"></span>
+						<span><img src="images/img2.png" style="color: #FFFFFF;"></span>
 						<div class="ast_whywe_info_box_info">
 							<p style="font-weight:bold;">Privacy Guaranteed</p>
 						</div>
