--- a/astrology_for_career.html
+++ b/astrology_for_career.html
@@ -137,11 +137,11 @@ gtag('config', 'AW-11069632900');
 
 							</li>
 
-							<li><a href="#">Case studies</a>
+							<li><a href="#">Gallery</a>
 								<ul class="dropdown1">
 								<div class="main">	
-								<li><a href="case_studies_videos.html" style="color: black;">Videos</a></li>
-								<li><a href="case_studies_text.html" style="color: black;">Text</a></li>
+									<li><a href="case_studies_text.html" style="color: black;">Photos</a></li>
+									<li><a href="case_studies_videos.html" style="color: black;">Videos</a></li>
 								</div>
 								</ul>
 							</li>
@@ -201,9 +201,9 @@ gtag('config', 'AW-11069632900');
 						<h3 style="color:red;">Careers by planet</h3><br>
 						<p align="justify"  style="color:#000000;">In Vedic astrology, one assesses career by blending the influences of key houses and planets. The most important house is the first house or lagna. If we had only one house to analyze before making a judgment, this would be it. The first house represents the person as a whole and therefore planets or aspects here can shape a person’s outlook that reflects the planet's significations.</p><br>
 
-						<div align="center">
+						<!-- <div align="center">
 							<img src="images/planet.png" alt="Careers by planet">
-						</div><br>
+						</div><br> -->
 
 							<ul style="color:black;">
 								<li><b>Sun:</b> Authority, Politicians, Scientists, Leaders, Directors, Government employees,
