--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 			<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-1 col-xs-offset-0">
 				<div class="ast_heading">
 					<h1>our <span>services</span></h1>
-					<p align="justify">We provide consultancy, education, and support to individuals who wish to benefit from the wisdom of Astrology and Vastushastra. During the consultation, we offer simple and straightforward Astro-Vastu suggestions that help balance the energy and vibrations in your home or office. </p>
+					<p >We provide consultancy, education, and support to individuals who wish to benefit from the wisdom of Astrology and Vastushastra. During the consultation, we offer simple and straightforward Astro-Vastu suggestions that help balance the energy and vibrations in your home or office. </p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
@@ -278,7 +278,7 @@
 					<h4> Astrology Services (Horoscope Reading)</h4>
 					<p>Your personal horoscope is based on your birth chart, which reflects how the current planetary movements are affecting you. A detailed analysis of your horoscope helps to understand significant life events and offers remedies for overcoming challenges. We provide insights into your past, present, and future, along with personalized solutions for better living.</p>
 					<div class="clearfix"></div>
-					<a href="" class="ast_btn">read more</a>
+					<a href="horoscopes_reading.html" class="ast_btn">read more</a>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
@@ -297,7 +297,7 @@
 					<h4>Vastu for Business</h4>
 					<p>For a prosperous and thriving business, the Vastu of your office and commercial spaces is crucial. We recommend office buildings facing the north, north-east, or north-west directions, as these directions bring good luck and positive energy. Our Vastu solutions are designed to enhance business growth and success.</p>
 					<div class="clearfix"></div>
-					<a href="" class="ast_btn">read more</a>
+					<a href="vastu_for_business.html" class="ast_btn">read more</a>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
@@ -306,7 +306,7 @@
 					<h4>Vastu for Partially completed construction</h4>
 					<p> The earlier you think about the vastu aspects of your residential project, the more benefit you have. </p>
 					<div class="clearfix"></div>
-					<a href="" class="ast_btn">read more</a>
+					<a href="vs" class="ast_btn">read more</a>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-2 col-sm-2 col-xs-5">
@@ -375,7 +375,7 @@
 										</div>
 									</a>
 								</li>
-								<li>
+								<!-- <li>
 									<a href="">
 										<img src="" alt="">
 										<div class="ast_vedic_astro_info">
@@ -402,7 +402,7 @@
 											<p>Preference should be given to plots with a rectangular and square shape...</p>
 										</div>
 									</a>
-								</li>
+								</li> -->
 							</ul>
 						</div>
 					</div>
@@ -442,7 +442,7 @@
 										</div>
 									</a>
 								</li>
-								<li>
+								<!-- <li>
 									<a href="">
 										<img src="" alt="">
 										<div class="ast_vedic_astro_info">
@@ -460,7 +460,7 @@
 											<p>As illnesses increase, it's important to understand the astrological aspects for protection.</p>
 										</div>
 									</a>
-								</li>
+								</li> -->
 													
 							</ul>
 						</div>
@@ -497,7 +497,7 @@
 <!--WeDo End-->
 
 <!-- Testimonials Start-->
-<div class="ast_testimonial_wrapper ast_toppadder70 ast_bottompadder70">
+<!-- <div class="ast_testimonial_wrapper ast_toppadder70 ast_bottompadder70">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-1 col-xs-offset-0">
@@ -550,7 +550,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 <!-- Testimonials End-->
 <!-- Download wrapper start-->
 <div class="ast_download_wrapper ast_toppadder70 ast_bottompadder70">
