--- a/vastu_for_flats.html
+++ b/vastu_for_flats.html
@@ -138,11 +138,11 @@ gtag('config', 'AW-11069632900');
 
 							</li>
 
-							<li><a href="#">Case studies</a>
+							<li><a href="#">Gallery</a>
 								<ul class="dropdown1">
 								<div class="main">	
-								<li><a href="case_studies_videos.html" style="color: black;">Videos</a></li>
-								<li><a href="case_studies_text.html" style="color: black;">Text</a></li>
+									<li><a href="case_studies_text.html" style="color: black;">Photos</a></li>
+									<li><a href="case_studies_videos.html" style="color: black;">Videos</a></li>
 								</div>
 								</ul>
 							</li>
