--- a/vastu_correction.html
+++ b/vastu_correction.html
@@ -137,11 +137,11 @@
 
 							</li>
 
-							<li><a href="#">Case studies</a>
+							<li><a href="#">Gallery</a>
 								<ul class="dropdown1">
 								<div class="main">	
-								<li><a href="case_studies_videos.html" style="color: black;">Videos</a></li>
-								<li><a href="case_studies_text.html" style="color: black;">Text</a></li>
+									<li><a href="case_studies_text.html" style="color: black;">Photos</a></li>
+									<li><a href="case_studies_videos.html" style="color: black;">Videos</a></li>
 								</div>
 								</ul>
 							</li>
