--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<div class="ast_logo">
-					<a href="index.html"><img src="" alt="" title=""></a>
+					<a href="index.html"><img src="images/white bg.png" alt="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune" title="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune"></a>
 					<button class="ast_menu_btn"><i class="fa fa-bars" aria-hidden="true"></i></button>
 				</div>
 			</div>
@@ -261,7 +261,7 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 			<div class="ast_whywe_info">
 				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 					<div class="ast_whywe_info_box">
-						<span><img src="images/img1.png" style="color: #FFFFFF;"></span>
+						<span><img src="images/flood.png" style="color: #FFFFFF;"></span>
 						<div class="ast_whywe_info_box_info">							
 							<p style="font-weight:bold;">Accurate Remedial Solutions </p>
 						</div>
@@ -269,7 +269,7 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 					<div class="ast_whywe_info_box">
-						<span><img src="images/img2.png" style="color: #FFFFFF;"></span>
+						<span><img src="images/privacy.png" style="color: #FFFFFF;"></span>
 						<div class="ast_whywe_info_box_info">
 							<p style="font-weight:bold;">Privacy Guaranteed</p>
 						</div>
