--- a/case_studies_text.html
+++ b/case_studies_text.html
@@ -78,7 +78,7 @@ gtag('config', 'AW-11069632900');
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<div class="ast_logo">
-					<a href="index.html"><img src="" alt="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune" title="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune"></a>
+					<a href="index.html"><img src="images/white bg.png" alt="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune" title="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune"></a>
 					<button class="ast_menu_btn"><i class="fa fa-bars" aria-hidden="true"></i></button>
 				</div>
 			</div>
