--- a/faq.html
+++ b/faq.html
@@ -78,7 +78,7 @@ gtag('config', 'AW-11069632900');
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<div class="ast_logo">
-					<a href="index.html"><img src="" alt="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune" title="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune"></a>
+					<a href="index.html"><img src="images/white bg.png" alt="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune" title="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune"></a>
 					<button class="ast_menu_btn"><i class="fa fa-bars" aria-hidden="true"></i></button>
 				</div>
 			</div>
@@ -198,7 +198,7 @@ gtag('config', 'AW-11069632900');
 						  <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">2. When is the best time to implement Vastu Shastra principles?</a>
 						</h4>
 					  </div>
-					  <div id="collapse2" class="panel-collapse collapse in">
+					  <div id="collapse2" class="panel-collapse collapse ">
 						<div class="panel-body" style="color:#000000;">The ideal time to follow Vastu is:<br>
 						<ul>
 							<li>When constructing a new property.</li>
@@ -214,7 +214,7 @@ gtag('config', 'AW-11069632900');
 						  <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">3. How soon can I experience the benefits of Vastu?</a>
 						</h4>
 					  </div>
-					  <div id="collapse3" class="panel-collapse collapse in">
+					  <div id="collapse3" class="panel-collapse collapse ">
 						<div class="panel-body" style="color:#000000;">The results of implementing Vastu vary depending on the level of correction and the individual’s situation. Positive changes may be felt within weeks, while some benefits take longer, depending on the adjustments made.</div>
 					  </div>
 					</div>
@@ -224,7 +224,7 @@ gtag('config', 'AW-11069632900');
 						  <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">4. Does Vastu affect the tenants or the owner of a property?</a>
 						</h4>
 					  </div>
-					  <div id="collapse4" class="panel-collapse collapse in">
+					  <div id="collapse4" class="panel-collapse collapse ">
 						<div class="panel-body" style="color:#000000;">Both tenants and property owners can experience the effects of Vastu. While the owner is more directly impacted due to their long-term association, tenants too benefit from living in a Vastu-compliant space.</div>
 					  </div>
 					</div>
@@ -234,7 +234,7 @@ gtag('config', 'AW-11069632900');
 						  <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">5. Does Vastu Shanti Pooja really work?</a>
 						</h4>
 					  </div>
-					  <div id="collapse5" class="panel-collapse collapse in">
+					  <div id="collapse5" class="panel-collapse collapse">
 						<div class="panel-body" style="color:#000000;">Yes, Vastu Shanti Pooja is believed to appease the energies of the land and rectify imbalances, bringing harmony and positive vibrations to the space</div>
 					  </div>
 					</div>
@@ -245,7 +245,7 @@ gtag('config', 'AW-11069632900');
 						  <a data-toggle="collapse" data-parent="#accordion" href="#collapse6">6. Is it necessary to construct a house according to Vastu?</a>
 						</h4>
 					  </div>
-					  <div id="collapse6" class="panel-collapse collapse in " >
+					  <div id="collapse6" class="panel-collapse collapse " >
 						<div class="panel-body" style="color:#000000;">While not mandatory, building a home according to Vastu ensures alignment with natural forces, fostering a harmonious and prosperous environment.</div>
 					  </div>
 					</div>
@@ -255,7 +255,7 @@ gtag('config', 'AW-11069632900');
 						  <a data-toggle="collapse" data-parent="#accordion" href="#collapse7">7. What is the ideal plot for constructing a home?</a>
 						</h4>
 					  </div>
-					  <div id="collapse7" class="panel-collapse collapse in ">
+					  <div id="collapse7" class="panel-collapse collapse ">
 						<div class="panel-body" style="color:#000000;"> An ideal plot should be:
 							<ul>
 								<li>Square or rectangular in shape.</li>
@@ -271,7 +271,7 @@ gtag('config', 'AW-11069632900');
 						  <a data-toggle="collapse" data-parent="#accordion" href="#collapse8">8. What is the primary purpose of Vastu Shastra?</a>
 						</h4>
 					  </div>
-					  <div id="collapse8" class="panel-collapse collapse in">
+					  <div id="collapse8" class="panel-collapse collapse ">
 						<div class="panel-body" style="color:#000000;"> The main aim of Vastu is to create a balanced and harmonious living environment that nurtures the physical, mental, and spiritual well-being of its inhabitants.</div>
 					  </div>
 					</div>
@@ -281,7 +281,7 @@ gtag('config', 'AW-11069632900');
 						  <a data-toggle="collapse" data-parent="#accordion" href="#collapse9">9. What is the best direction to sleep in?</a>
 						</h4>
 					  </div>
-					  <div id="collapse9" class="panel-collapse collapse in">
+					  <div id="collapse9" class="panel-collapse collapse ">
 						<div class="panel-body" style="color:#000000;">According to Vastu, sleeping with your head towards the South or East promotes better health and restful sleep. Avoid sleeping with your head towards the North.</div>
 					  </div>
 					</div>
@@ -291,7 +291,7 @@ gtag('config', 'AW-11069632900');
 						  <a data-toggle="collapse" data-parent="#accordion" href="#collapse10">10. Why is the North-East corner of a house considered auspicious?</a>
 						</h4>
 					  </div>
-					  <div id="collapse10" class="panel-collapse collapse in">
+					  <div id="collapse10" class="panel-collapse collapse ">
 						<div class="panel-body" style="color:#000000;">The North-East corner, associated with water and Lord Shiva, is the direction of divine energy. Keeping it open and clutter-free ensures the flow of positive energy throughout the house.</div>
 					  </div>
 					</div>
@@ -301,7 +301,7 @@ gtag('config', 'AW-11069632900');
 						  <a data-toggle="collapse" data-parent="#accordion" href="#collapse11">11.Which is the best location for bedrooms? </a>
 						</h4>
 					  </div>
-					  <div id="collapse11" class="panel-collapse collapse in">
+					  <div id="collapse11" class="panel-collapse collapse ">
 						<div class="panel-body" style="color:#000000;">
 						<ul>
 							<li>The South-West corner is ideal for the master bedroom as it promotes stability and strength.</li>
@@ -318,7 +318,7 @@ gtag('config', 'AW-11069632900');
 						</a>
 						</h4>
 					  </div>
-					  <div id="collapse12" class="panel-collapse collapse in 	">
+					  <div id="collapse12" class="panel-collapse collapse 	">
 						<div class="panel-body" style="color:#000000;">The house should ideally follow a 1:2 ratio for length and breadth, ensuring symmetry and proper energy distribution. </div>
 					  </div>
 					</div>
@@ -329,7 +329,7 @@ gtag('config', 'AW-11069632900');
 						</a>
 						</h4>
 					  </div>
-					  <div id="collapse13" class="panel-collapse collapse in">
+					  <div id="collapse13" class="panel-collapse collapse ">
 						<div class="panel-body" style="color:#000000;">No, structural changes are not always required. Simple remedies such as rearranging furniture, using colors, mirrors, or symbolic corrections can address most Vastu doshas effectively.</div>
 					  </div>
 					</div>
@@ -339,7 +339,7 @@ gtag('config', 'AW-11069632900');
 						  <a data-toggle="collapse" data-parent="#accordion" href="#collapse14">14. Is Vastu applicable to all religions or just Hindus? </a>
 						</h4>
 					  </div>
-					  <div id="collapse14" class="panel-collapse collapse in">
+					  <div id="collapse14" class="panel-collapse collapse ">
 						<div class="panel-body" style="color:#000000;">Vastu is a universal science and is not confined to any particular religion. Its principles can benefit anyone seeking harmony and balance in their space.</div>
 					  </div>
 					</div>
@@ -349,7 +349,7 @@ gtag('config', 'AW-11069632900');
 						  <a data-toggle="collapse" data-parent="#accordion" href="#collapse15">15. Why are corners so significant in Vastu? </a>
 						</h4>
 					  </div>
-					  <div id="collapse15" class="panel-collapse collapse in">
+					  <div id="collapse15" class="panel-collapse collapse ">
 						<div class="panel-body" style="color:#000000;">Corners are powerful zones in Vastu as they serve as points where energies converge. Proper care of corners, such as keeping them clean and balanced, ensures a smooth flow of positive energy throughout the space.</div>
 					  </div>
 					</div>
@@ -359,7 +359,7 @@ gtag('config', 'AW-11069632900');
 							<a data-toggle="collapse" data-parent="#accordion" href="#collapse15">16. Can Vastu Shastra principles be applied to modern apartments? </a>
 						  </h4>
 						</div>
-						<div id="collapse15" class="panel-collapse collapse in">
+						<div id="collapse15" class="panel-collapse collapse ">
 						  <div class="panel-body" style="color:#000000;">Yes, Vastu principles can be adapted to modern homes and apartments. Even small changes in layout or décor can significantly enhance the energy flow in such spaces.</div>
 						</div>
 					  </div>
@@ -370,7 +370,7 @@ gtag('config', 'AW-11069632900');
 							</a>
 						  </h4>
 						</div>
-						<div id="collapse15" class="panel-collapse collapse in">
+						<div id="collapse15" class="panel-collapse collapse ">
 						  <div class="panel-body" style="color:#000000;">Vastu corrections can be implemented at various levels, from affordable symbolic remedies to more extensive structural changes, depending on the situation and budget.</div>
 						</div>
 					  </div>  
