check the about us page

--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 				
 				<img src="" alt="" class="img-responsive" />
 				<ul class="ast_toppadder40 ast_bottompadder50">
-					<li><strong>shree krushna </strong></li>
+					<li><strong>shree krushna Guruji</strong></li>
 					<li><strong>A</strong>strologer</li>
 					<li><strong>V</strong>astu Consultant</li>
 						
@@ -227,12 +227,12 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 		<div class="row">
 			<div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 col-lg-push-7 col-md-push-7 col-sm-push-7 col-xs-push-0">
 				<div class="ast_about_info_img">
-					<img src="images/shreeKrishnaGuruji.jpg" alt="Vedmurti shree krushna  Guruji">
+					<img src="images/shreeKrishnaGuruji.jpg" alt="Vedmurti shree krushna  Guruji"   style="    margin-top: 50px;" >
 				</div>
 			</div>
 			<div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 col-lg-pull-5 col-md-pull-5 col-sm-pull-5 col-xs-pull-0">
 				<div class="ast_about_info">
-					<br><h3 class="ast_blog_info_heading" style="color:#FF8409; font-weight:bold;"><strong>Vedmurti Shree Krishna Joshi Guruji Kanvashakha Sanhita </strong></h3><br>
+					<br><h3 class="ast_blog_info_heading" style="color:#FF8409; font-weight:bold;"><strong>Vedmurti Shree Krishna Joshi Guruji  </strong></h3><br>
 					<p style="color:#FF8409;"><strong>नमस्ते वास्तु पुरुष: भूशय्या भिरत प्रभो | मद्गृहे धन धान्यादि समृद्धं कुरु सर्वदा || <br>My bow to a Vastu Purush who is living on the ground to give me prosperity in my house forever.</strong></p><br>
 					<p style="color:#000000; text-align: justify;">Vedmurti Shree Krishna Joshi Guruji Kanvashakha Sanhita is a renowned spiritual guide and expert in the field of Vedic astrology and Vastu. Guruji has acquired extensive knowledge and expertise through years of dedicated study and practice.
 						Guruji has earned the prestigious title of Vastu Visharad, Sanskrit-Jyotish Visharad, and Jyotish Pandit, among others, due to his in-depth understanding of the sacred sciences. His expertise also includes Nakshatra Jyotish Ratna, Vastu Bhushan, and Vastu Pandit.</p><br>
@@ -312,6 +312,75 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 	</div>
 </div>
 <!--Why Us End-->
+<!-- Services Start -->
+<div class="ast_service_wrapper ast_toppadder70 ast_bottompadder50">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-1 col-xs-offset-0">
+				<div class="ast_heading">
+					<h1>our <span>services</span></h1>
+					<p >We provide consultancy, education, and support to individuals who wish to benefit from the wisdom of Astrology and Vastushastra. </p>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+				<div class="ast_service_box">
+					<img src="images/service1.png" alt="">
+					<h4> Astrology Services (Horoscope Reading)</h4>
+					<p>Your personal horoscope is based on your birth chart, which reflects how the current planetary movements are affecting you.</p>
+					<div class="clearfix"></div>
+					<a href="horoscopes_reading.html" class="ast_btn">read more</a>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+				<div class="ast_service_box">
+					<img src="images/service2.png" alt="">
+					<h4> Havan and Yajna Services</h4>
+					<p>Havan and Yajna are ancient fire rituals performed to invoke divine blessings for health, wealth, and prosperity. These sacred rituals are believed to purify the environment and attract positive energies.
+					</p>
+					<div class="clearfix"></div>
+					<a href="" class="ast_btn">read more</a>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+				<div class="ast_service_box">
+					<img src="images/service3.png" alt="">
+					<h4>Vastu for Business</h4>
+					<p>For a prosperous and thriving business, the Vastu of your office and commercial spaces is crucial. </p>
+					<div class="clearfix"></div>
+					<a href="vastu_for_business.html" class="ast_btn">read more</a>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+				<div class="ast_service_box">
+					<img src="images/service4.png" alt="">
+					<h4>Vastu for Partially completed construction</h4>
+					<p> The earlier you think about the vastu aspects of your residential project, the more benefit you have. </p>
+					<div class="clearfix"></div>
+					<a href="vs" class="ast_btn">read more</a>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-2 col-sm-2 col-xs-5">
+				<div class="ast_service_box">
+					<img src="images/service5.png" alt="">
+					<h4>Vastu For Business</h4>
+					<p>For a prosperous and thriving business, the Vastu of your office and commercial spaces is crucial.</p>
+					<div class="clearfix"></div>
+					<a href="" class="ast_btn">read more</a>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+				<div class="ast_service_box">
+					<img src="images/service6.png" alt="Service">
+					<h4>Vastu Tips for Buying Plot</h4>
+					<p>Not just houses, residential plots too should be in line with vastu standards.</p>
+					<div class="clearfix"></div>
+					<a href="" class="ast_btn">read more</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div> 
+<!-- Services Start -->
 
 <!--About Us Start-->
 <div class="ast_about_wrapper ast_toppadder70 ast_bottompadder70">
@@ -387,28 +456,28 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 					<div class="ast_counter">
 						<span><img src="images/timer1.png" alt="timer"></span>
 						<h2 class="timer" data-from="0" data-to="412" data-speed="5000"></h2>
-						<h4>Construction Sites Evaluations</h4>
+						<h4>Puja Services</h4>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 					<div class="ast_counter">
 						<span><img src="images/timer2.png" alt="timer"></span>
 						<h2 class="timer" data-from="0" data-to="650" data-speed="5000"></h2>
-						<h4>Vastu Defects Identified</h4>
+						<h4>Bhavishya Insights</h4>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 					<div class="ast_counter">
 						<span><img src="images/timer3.png" alt="timer"></span>
 						<h2 class="timer" data-from="0" data-to="350" data-speed="5000"></h2>
-						<h4>Served Clients Across Maharashtra</h4>
+						<h4>Vedic Rituals</h4>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 					<div class="ast_counter">
 						<span><img src="images/timer4.png" alt="timer"></span>
 						<h2 class="timer" data-from="0" data-to="15" data-speed="5000"></h2>
-						<h4>Years of Experiences</h4>
+						<h4>Spiritual Guidance</h4>
 					</div>
 				</div>
 			</div>
@@ -425,53 +494,54 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 			<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-1 col-xs-offset-0">
 				<div class="ast_heading">
 					<h1>what client<span> says</span></h1>
-					<p style="color:#000000;">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected hummer.</p>
-				</div>
-			</div>
-			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-0">
-				<div class="ast_testimonials_slider">
-					<div class="owl-carousel owl-theme">
-   					<div class="item">
-   						<div class="ast_testimonials_slider_box">
-							<img src="images/header/usr.png" alt="Testimonial">
-							<div class="ast_testimonials_slider_box_text">
-								<p style="color:#000000;">Got the perfect solution for one of issue. Within 30 days I got the results. Perfect solution from Mangesh GURUJI, thank you very much.</p>
-								<h4>Mr. Kalpesh Mane</h4>
+					<p style="color:#000000;">Our clients' experiences speak volumes about our work.
+						Read what they have to say about our services and impact</p>
+						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-0">
+							<div class="ast_testimonials_slider">
+								<div class="owl-carousel owl-theme">
+									<div class="item">
+										<div class="ast_testimonials_slider_box">
+											<img src="images/header/usr.png" alt="Testimonial">
+											<div class="ast_testimonials_slider_box_text">
+												<p style="color:#000000;">Got the perfect solution for one of issue. Within 30 days I got the results. Perfect solution from Mangesh GURUJI, thank you very much.</p>
+												<h4>Mr. Kalpesh Mane</h4>
+											</div>
+										</div>   					
+								</div>
+								<div class="item">
+									<div class="ast_testimonials_slider_box">
+										<img src="images/header/usr.png" alt="Testimonial">
+										<div class="ast_testimonials_slider_box_text">
+											<p style="color:#000000;">One of the best Vastu Consultant in Pune i ever found... The changes they said to be done gave the best results in just next few days. I will suggest to prefer each and everyone as this Vastu Consultant.</p>
+											<h4>Mr. Shridhar Likhite</h4>
+										</div>					
+									</div>   					
+								</div>
+								<div class="item">
+									<div class="ast_testimonials_slider_box">
+										<img src="images/header/usr.png" alt="Testimonial">
+										<div class="ast_testimonials_slider_box_text">
+											<p style="color:#000000;">I am grateful to have such a down to earth person for vastu consultation. Purely scientific consultation without deconstruction. I got immediate result by following very simple solution. Thank you !!</p>
+											<h4>Mr. Kaustubh Ambulkar</h4>
+										</div>
+									</div>
+								</div>
+								<div class="item">
+									<div class="ast_testimonials_slider_box">
+							   <img src="images/header/usr.png" alt="Testimonial">
+							   <div class="ast_testimonials_slider_box_text">
+								   <p style="color:#000000;">Very effective...got good result in 2day whith perfect remedy....thanks Guruji...</p>
+								   <h4>Mrs. Sheetal Pujari</h4>
+								</div>
 							</div>
-   						</div>   					
-   					</div>
-   					<div class="item">
-   						<div class="ast_testimonials_slider_box">
-   							<img src="images/header/usr.png" alt="Testimonial">
-							<div class="ast_testimonials_slider_box_text">
-								<p style="color:#000000;">One of the best Vastu Consultant in Pune i ever found... The changes they said to be done gave the best results in just next few days. I will suggest to prefer each and everyone as this Vastu Consultant.</p>
-								<h4>Mr. Shridhar Likhite</h4>
-							</div>					
-   						</div>   					
-   					</div>
-   					<div class="item">
-   						<div class="ast_testimonials_slider_box">
-   							<img src="images/header/usr.png" alt="Testimonial">
-							<div class="ast_testimonials_slider_box_text">
-								<p style="color:#000000;">I am grateful to have such a down to earth person for vastu consultation. Purely scientific consultation without deconstruction. I got immediate result by following very simple solution. Thank you !!</p>
-								<h4>Mr. Kaustubh Ambulkar</h4>
-							</div>
-   						</div>
-   					</div>
-					<div class="item">
-   						<div class="ast_testimonials_slider_box">
-   							<img src="images/header/usr.png" alt="Testimonial">
-							<div class="ast_testimonials_slider_box_text">
-								<p style="color:#000000;">Very effective...got good result in 2day whith perfect remedy....thanks Guruji...</p>
-								<h4>Mrs. Sheetal Pujari</h4>
-							</div>
-   						</div>
-   					</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	</div>
+</div>
 </div>
 <!-- Testimonials End-->
 <!-- Download wrapper start-->
@@ -494,8 +564,8 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 		<div class="row">
 			<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-1 col-xs-offset-0">
 				<div class="ast_footer_info">
-					<img src="images/header/logo.png" alt="Shree Jyotish And Vastu Research Center" title="Shree Jyotish And Vastu Research Center">
-					<p>Shree Jyotish and Vastu Research Center is based on traditional and Krishmurti horoscope reading methods, which result in accurate forecasting. Unmistakable Interpretation of Vidhilikhit facts done by Guruji "Correct rituals are performed by Guruji." Such testimonials from hundreds of people are with us. shree krushna  Guruji solved complex problems with effective spiritual remedies.</p>
+					<img src="images/white bg.png" alt="Shree Jyotish And Vastu Research Center" title="Shree Jyotish And Vastu Research Center">
+					<p>Shree Krushna Guruji is a revered spiritual leader known for his wisdom, guidance, and deep devotion to spreading knowledge and peace. His teachings inspire countless individuals to lead a life of virtue, humility, and compassion.</p>
 
 					<p class="ast_blog_info_details" style="color:yellow;"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+919096267138" style="color:#FFFFFF;">+91-9096267138</a></p>
 					<!-- <p class="ast_blog_info_details" style="color:yellow;"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+919022096393" style="color:#FFFFFF;"></a></p>
@@ -545,11 +615,11 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 				<div class="widget text-widget">
 					<h4 class="widget-title">get in touch</h4>
 					<div class="ast_gettouch">
-						<!-- <ul>
-							<li><i class="fa fa-home" aria-hidden="true"></i> i change later</li>
-							<li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:09422548042"></a></li>
+						<ul>
+							<li style="color:#FFFFFF"><i class="fa fa-home" aria-hidden="true"  ></i>SrNo- 11/5, Flat No.202, Dhanashree Apartment, near Sanjeevani Mendical, Nanded, Pune, Maharashtra 411041</li>
+							<li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:09096267138">09096267138</a></li>
 						  <li><a href="https://wa.me/919422548042?text=I'm%20interested%20in%20%20Astrology/Vastu%20Consultation"><i class="fa fa-whatsapp"></i></a></li>	
-						</ul> -->
+						</ul>
 					</div>				
 				</div>			
 			</div>
