--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 	</div>
 </div>
 <!--Why Us End-->
-<!--Services Start-->
+<!-- Services Start
 <div class="ast_service_wrapper ast_toppadder70 ast_bottompadder50">
 	<div class="container">
 		<div class="row">
@@ -329,7 +329,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 <!--Services End-->
 <!--WeDo Start-->
 <div class="ast_wedo_wrapper ast_toppadder70 ast_bottompadder50">
