--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,7 @@ gtag('config', 'AW-11069632900');
 <link rel="stylesheet" type="text/css" href="styleee/owl.theam.default.css">
 <link rel="stylesheet" type="text/css" href="styleee/style.css">
 <link rel="stylesheet" type="text/css" href="styleee/example.css">
+<link rel="stylesheet" type="text/css" href="styleee/form.css">
 <!-- Favicon Link -->
 <link rel="shortcut icon" type="image/png" href="images/header/favicon.png" />
 </head>
@@ -78,7 +79,7 @@ gtag('config', 'AW-11069632900');
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<div class="ast_logo">
-					<a href="index.html"><img src="" alt="Shree Jyotish And Vastu Research Center" title="Shree Jyotish And Vastu Research Center"></a>
+					<a href="index.html"><img src="images/white bg.png" alt="Shree Jyotish And Vastu Research Center" title="Shree Jyotish And Vastu Research Center"></a>
 					<button class="ast_menu_btn"><i class="fa fa-bars" aria-hidden="true"></i></button>
 				</div>
 			</div>
@@ -218,6 +219,12 @@ gtag('config', 'AW-11069632900');
 		</div>
 	</div>
 </div>
+<form>      
+	<input name="name" type="text" class="feedback-input" placeholder="Name" />   
+	<input name="email" type="text" class="feedback-input" placeholder="Email" />
+	<textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+	<input type="submit" value="SUBMIT"/>
+  </form>
 <!--Content Us End-->
 
 				
